fix lists aligning left in center on tablet size screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,4 +160,9 @@ footer i {
     flex-direction: column;
     align-items: center;
    }
+
+   #lists > ul {
+    display: inline-block;
+    text-align: left;
+   }
 }    
